Change to classes for style switching to prevent flickering

--- a/css/fancy0.css
+++ b/css/fancy0.css
@@ -1,34 +1,34 @@
-body {
+.fancy0 {
   /* The floating elements start looking terrible below this width */
   min-width: 48em;
 }
 
 /* Re-establish some default styles we'd normally be happy to be rid of */
 
-caption {
+.fancy0 caption {
   font-weight: bold;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.fancy0 h1, .fancy0 h2, .fancy0 h3, .fancy0 h4, .fancy0 h5, .fancy0 h6 {
   font-weight: bold;
 }
 
-h1 {
+.fancy0 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-h2 {
+.fancy0 h2 {
   font-size: 1.5em;
   margin: 0.83em 0;
 }
 
-h3 {
+.fancy0 h3 {
   font-size: 1.117em;
   margin: 1em 0;
 }
 
-p {
+.fancy0 p {
   margin: 1em 0;
 }
 
@@ -36,30 +36,30 @@ p {
 
 /* Navbars */
 
-nav {
+.fancy0 nav {
   border: 1px solid #000;
   margin: 32px;
   min-width: 160px;
 }
 
-.nav-title {
+.fancy0 .nav-title {
   font-weight: bold;
 }
 
-.nav-toggle {
+.fancy0 .nav-toggle {
   display: none;
 }
 
-nav li, .nav-title {
+.fancy0 nav li, .fancy0 .nav-title {
   text-align: center;
   padding: 4px 16px;
 }
 
-nav li:not(:last-child), .nav-title {
+.fancy0 nav li:not(:last-child), .fancy0 .nav-title {
   border-bottom: 1px solid #000;
 }
 
-.nav-portrait {
+.fancy0 .nav-portrait {
   display: none;
 }
 
@@ -67,11 +67,11 @@ nav li:not(:last-child), .nav-title {
 
 /* Tables */
 
-td, th {
+.fancy0 td, .fancy0 th {
   padding: 4px 8px;
 }
 
-th {
+.fancy0 th {
   background-color: #eee;
   vertical-align: middle;
 }
@@ -80,25 +80,25 @@ th {
 
 /* Main page layout */
 
-header {
+.fancy0 header {
   margin-left: 14em; /* Width of navbar and its margins */
 }
 
-nav {
+.fancy0 nav {
   float: left;
   margin-top: 16px;
 }
 
-main {
+.fancy0 main {
   margin: 32px;
 }
 
-.skillset-table {
+.fancy0 .skillset-table {
   float: right;
   margin: 0 0 16px 16px;
 }
 
-footer {
+.fancy0 footer {
   font-size: 0.8em;
   margin-top: 48px;
   text-align: center;
@@ -109,34 +109,34 @@ footer {
 
 /* Skillset table */
 
-.no-border {
+.fancy0 .no-border {
   border-style: none;
 }
 
-.skillset-table > caption {
+.fancy0 .skillset-table > caption {
   line-height: 1.2;
   margin-bottom: 8px; /* Leaves enough room for the ::after hint */
 }
 
-.skillset-table > caption::after {
+.fancy0 .skillset-table > caption::after {
   content: '\A(hover over a skill for details)';
   font-size: 0.8em;
   font-weight: normal;
   white-space: pre;
 }
 
-.skillset-table .skillset-item {
+.fancy0 .skillset-table .skillset-item {
   cursor: help;
   position: relative;
   text-decoration: underline;
 }
 
-.skillset-table .skillset-item:not(:last-child) {
+.fancy0 .skillset-table .skillset-item:not(:last-child) {
   margin-bottom: 0.2em;
 }
 
 /* Hover text for skillset table items */
-.skillset-table .skillset-item:hover::after {
+.fancy0 .skillset-table .skillset-item:hover::after {
   background-color: #111;
   color: #fff;
   content: attr(data-title);
@@ -153,7 +153,7 @@ footer {
 
 /* Employment history */
 
-.employment-item {
+.fancy0 .employment-item {
   margin: 2em 0;
 }
 
@@ -161,13 +161,13 @@ footer {
 
 /* Project items */
 
-.project-group {
+.fancy0 .project-group {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.project-item {
+.fancy0 .project-item {
   align-items: center;
   border: 1px solid #000;
   display: flex;
@@ -177,24 +177,24 @@ footer {
   width: 360px;
 }
 
-.project-item > .project-thumbnail {
+.fancy0 .project-item > .project-thumbnail {
   border: 1px solid #000;
 }
 
-.project-item > .project-title {
+.fancy0 .project-item > .project-title {
   margin-bottom: 0.5em;
 }
 
-.project-item > .project-links {
+.fancy0 .project-item > .project-links {
   margin-top: 0.5em;
 }
 
-.project-item > .project-links > li {
+.fancy0 .project-item > .project-links > li {
   display: inline-block;
   margin-right: 16px;
 }
 
-#project-euler-thumbnail {
+.fancy0 #project-euler-thumbnail {
   /*
   The Project Euler badge is 62px tall instead of the 180px of all the other
   project images, so this vertically centers it with the rest.
@@ -206,13 +206,13 @@ footer {
 
 /* Contact methods list */
 
-ul.contact-methods-list {
+.fancy0 ul.contact-methods-list {
   list-style: disc;
   margin: 1em 0;
   padding-left: 3em;
 }
 
-ul.contact-methods-list > li {
+.fancy0 ul.contact-methods-list > li {
   display: list-item;
 }
 
