--- a/css/fancy1.css
+++ b/css/fancy1.css
@@ -1,25 +1,25 @@
 /* Re-establish some default styles */
 
-h1, h2, h3, h4, h5, h6 {
+.fancy1 h1, .fancy1 h2, .fancy1 h3, .fancy1 h4, .fancy1 h5, .fancy1 h6 {
   font-weight: bold;
 }
 
-h1 {
+.fancy1 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-h2 {
+.fancy1 h2 {
   font-size: 1.5em;
   margin: 0.83em 0;
 }
 
-h3 {
+.fancy1 h3 {
   font-size: 1.117em;
   margin: 1em 0;
 }
 
-p {
+.fancy1 p {
   margin: 1em 0;
 }
 
@@ -27,41 +27,41 @@ p {
 
 /* Color scheme */
 
-body {
+.fancy1 {
   background-color: #f8f8f8;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.fancy1 h1, .fancy1 h2, .fancy1 h3, .fancy1 h4, .fancy1 h5, .fancy1 h6 {
   color: #231651;
 }
 
-header {
+.fancy1 header {
   background-color: #231651;
 }
 
-header > h1 {
+.fancy1 header > h1 {
   color: #ffffff;
 }
 
-main, footer {
+.fancy1 main, .fancy1 footer {
   background-color: #d6fff6;
 }
 
-nav, .skillset-table th, .project-item {
+.fancy1 nav, .fancy1 .skillset-table th, .fancy1 .project-item {
   background-color: #4dccbd;
   border-color: #231651;
 }
 
-nav li {
+.fancy1 nav li {
   background-color: #2374ab;
   border-color: #231651;
 }
 
-nav li > a {
+.fancy1 nav li > a {
   color: #ffffff;
 }
 
-.project-item {
+.fancy1 .project-item {
   border-color: #231651;
 }
 
@@ -69,26 +69,26 @@ nav li > a {
 
 /* Main layout */
 
-body {
+.fancy1 {
   font-family: Helvetica, sans-serif;
 }
 
-#fancy-o-meter-target {
+.fancy1 #fancy-o-meter-target {
   position: relative;
 }
 
-.nav-title, .nav-toggle {
+.fancy1 .nav-title, .fancy1 .nav-toggle {
   display: none;
 }
 
-nav {
+.fancy1 nav {
   position: absolute;
   left: calc((100% - 980px) / 2);
   top: 6em;
   z-index: 2
 }
 
-header {
+.fancy1 header {
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
   height: 6em;
@@ -100,12 +100,12 @@ header {
   z-index: 2;
 }
 
-main, footer {
+.fancy1 main, .fancy1 footer {
   left: calc(12em + (100% - 980px) / 2);
   position: absolute;
 }
 
-main {
+.fancy1 main {
   box-sizing: border-box;
   height: calc(100% - 7.5em);
   overflow-x: hidden;
@@ -115,7 +115,7 @@ main {
   width: calc(980px - 12em);
 }
 
-footer {
+.fancy1 footer {
   bottom: 0;
   height: 1.5em;
   text-align: center;
@@ -123,16 +123,16 @@ footer {
 }
 
 @media (max-width: 980px) {
-  nav, header {
+  .fancy1 nav, .fancy1 header {
     left: 0;
   }
 
-  main, footer {
+  .fancy1 main, .fancy1 footer {
     left: 12em;
   }
 }
 
-#section-contact {
+.fancy1 #section-contact {
   margin-bottom: 4em;
 }
 
@@ -140,7 +140,7 @@ footer {
 
 /* Navbars */
 
-nav {
+.fancy1 nav {
   border-left-style: solid;
   border-right-style: solid;
   border-width: 0.125em;
@@ -148,7 +148,7 @@ nav {
   width: 12em;
 }
 
-nav li {
+.fancy1 nav li {
   border-bottom-style: solid;
   border-width: 0.125em;
   text-align: center;
@@ -156,7 +156,7 @@ nav li {
   line-height: 2.5em;
 }
 
-nav li > a {
+.fancy1 nav li > a {
   display: block;
   font-size: 1.3em;
   height: 100%;
@@ -164,11 +164,11 @@ nav li > a {
   width: 100%;
 }
 
-nav li.nav-portrait {
+.fancy1 nav li.nav-portrait {
   height: 6.75em;
 }
 
-nav li.nav-portrait img {
+.fancy1 nav li.nav-portrait img {
   width: 12em;
   height: 6.75em;
 }
@@ -177,49 +177,49 @@ nav li.nav-portrait img {
 
 /* Skillset table */
 
-.no-border {
+.fancy1 .no-border {
   border-style: none;
 }
 
-.skillset-table {
+.fancy1 .skillset-table {
   float: right;
   margin: 0 0 2em 2em;
 }
 
-.skillset-table > caption {
+.fancy1 .skillset-table > caption {
   font-weight: bold;
   line-height: 1.2;
   margin-bottom: 0.5em; /* Leaves enough room for the ::after hint */
 }
 
-.skillset-table > caption::after {
+.fancy1 .skillset-table > caption::after {
   content: '\A(hover over a skill for details)';
   font-size: 0.9em;
   font-weight: normal;
   white-space: pre;
 }
 
-.skillset-table th, .skillset-table td {
+.fancy1 .skillset-table th, .skillset-table td {
   border-width: 0.125em;
   padding: 0.25em 0.5em;
 }
 
-.skillset-table th {
+.fancy1 .skillset-table th {
   vertical-align: middle;
 }
 
-.skillset-table .skillset-item {
+.fancy1 .skillset-table .skillset-item {
   cursor: help;
   position: relative;
   text-decoration: underline;
 }
 
-.skillset-table .skillset-item:not(:last-child) {
+.fancy1 .skillset-table .skillset-item:not(:last-child) {
   margin-bottom: 0.2em;
 }
 
 /* Hover text for skillset table items */
-.skillset-table .skillset-item:hover::after {
+.fancy1 .skillset-table .skillset-item:hover::after {
   background-color: #111111;
   color: #ffffff;
   content: attr(data-title);
@@ -236,7 +236,7 @@ nav li.nav-portrait img {
 
 /* Employment history */
 
-.employment-item {
+.fancy1 .employment-item {
   margin: 2em 0;
 }
 
@@ -244,13 +244,13 @@ nav li.nav-portrait img {
 
 /* Project items */
 
-.project-group {
+.fancy1 .project-group {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.project-item {
+.fancy1 .project-item {
   align-items: center;
   border-radius: 0.5em;
   border-style: solid;
@@ -262,30 +262,30 @@ nav li.nav-portrait img {
   width: 22em;
 }
 
-.project-item > .project-thumbnail {
+.fancy1 .project-item > .project-thumbnail {
   border-top-left-radius: 0.375em;
   border-top-right-radius: 0.375em;
   width: 22em;
 }
 
-.project-item > .project-title {
+.fancy1 .project-item > .project-title {
   margin-bottom: 0.5em;
 }
 
-.project-item > .project-description {
+.fancy1 .project-item > .project-description {
   padding: 0 1em;
 }
 
-.project-item > .project-links {
+.fancy1 .project-item > .project-links {
   margin-top: 0.5em;
 }
 
-.project-item > .project-links > li {
+.fancy1 .project-item > .project-links > li {
   display: inline-block;
   margin-right: 1em;
 }
 
-#project-euler-thumbnail {
+.fancy1 #project-euler-thumbnail {
   /*
   The Project Euler badge is 62px tall instead of the 180px of all the other
   project images, so this vertically centers it with the rest.
